[package]
edition = "2021"
name = "hashsig"
version = "0.1.0"
authors = ["Frantisek Mejzlik <frankmejzlik@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
sha3 = "0.10"
rand_chacha = "0.3"
rand_core = "0.6"
log = { version = "0.4", features = [
	"max_level_trace",
	"release_max_level_info",
] }
hex = "0.4"
chrono = "0.4"
fern = { version = "0.6" }
byteorder = "1.4"
bitreader = "0.3"
cfg-if = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
slice-of-array = "0.3"
tokio = { version = "1.21", features = ["full"] }
tungstenite = "0.18"
websocket = "0.26"
ctrlc = "3.2"

[features]
default = ["debug"]
debug = []
