[package]
edition = "2021"
name = "hab"
version = "0.1.0"
authors = ["Frantisek Mejzlik <frankmejzlik@proton.me>"]

[dependencies]
sha3 = "0.10"
sha2 = "0.10"
rand_chacha = { version = "0.3.1", features=["serde1"]}
rand_core = "0.6.4"
log = { version = "0.4" }
hex = "0.4"
chrono = "0.4"
byteorder = "1.4"
bitreader = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive", "rc"]}
tokio = { version = "1.21", features = ["full"] }
rand = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
petgraph = { version = "0.6", features=["serde-1"] }

[features]
default = ["debug"]
debug = []
store_state = []
print_times = []
log_input_output = []
simulate_out_of_order = []
simulate_fake_msgs = []

