[package]
edition = "2021"
name = "hab-benchmark"
version = "0.1.0"
authors = ["Frantisek Mejzlik <frankmejzlik@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
#habgit = "ssh://git@github.com/FrankMejzlik/hab.habranch = "master" }
hab = {path = "..", features = [
	"log_input_output",
	#"simulate_out_of_order",
	#"simulate_fake_msgs",
] }
clap = { version = "3.2", features = ["derive"] }
sha2 = "0.10"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
rand_core = "0.6.4"
log = { version = "0.4", features = [
	"max_level_debug",
	"release_max_level_off",
] }
chrono = "0.4"
fern = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.2"
rand = "0.8"
toml = "0.7"
rayon = "1.5.1"


[features]
default = ["debug"]
debug = []
simulate_stdin = []

